# SocyBase

./: .env.example  .gitignore  DEPLOY.md  docker-compose.yml  main_script.py  rapid_profile_scrape.py
backend/: .dockerignore  Dockerfile  Procfile  alembic.ini  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_page_author_profiles.py  002_add_missing_scraped_profile_columns.py  003_add_missing_scraped_posts_columns.py  004_add_performance_indexes.py  004_add_subscription_and_refund_fields.py  005_create_fb_ads_tables.py  006_traffic_bot.py  007_traffic_bot_wallet_deposits.py  008_add_performance_indexes.py  008_add_stripe_subscription_id_index.py  009_add_package_limits.py  010_add_platform_cost_per_post.py  011_add_boosted_post_and_scheduling.py  012_add_budget_type_and_lifetime_budget.py  013_add_competitor_pages_and_livestream.py  014_add_fb_action_logs.py  014_create_fb_cookie_sessions.py  015_create_browser_scrape_tasks.py  016_create_live_sell_tables.py  017_add_fb_action_logs.py  018_create_fb_action_batches.py  019_create_fb_login_tables.py  020_add_credit_cost_per_action.py  021_create_ai_search_history.py  022_create_quick_scan_history.py  023_add_access_token_to_login_results.py  024_add_warmup_batches.py  025_add_dom_selectors.py  026_add_warmup_schedule.py  026a_create_live_engage_tables.py  (+19 more)
backend/app/: celery_app.py  config.py  database.py  dependencies.py  main.py  plan_defaults.py  telegram_runner.py
backend/scripts/: fb_login_worker.py
backend/tests/: conftest.py  test_auth.py  test_credits.py
(+205 files in other folders)
