[project]
name = "socybase-backend"
version = "1.0.0"
description = "SocyBase - Social Media Data Extraction SaaS Backend"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "greenlet>=3.0.0",
    # Redis
    "redis[hiredis]>=5.0.0",
    # Task queue
    "celery[redis]>=5.4.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<4.1.0",
    # HTTP client
    "httpx>=0.27.0",
    # Validation
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Payments
    "stripe>=8.0.0",
    # Telegram Bot
    "python-telegram-bot>=21.0",
    # Rate Limiting
    "slowapi>=0.1.9",
    # SSE
    "sse-starlette>=1.6.0",
    # Excel export
    "openpyxl>=3.1.0",
    # Utilities
    "python-dotenv>=1.0.0",
    # Monitoring
    "flower>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "aiosqlite>=0.19.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
